<resources>
    <string name="app_name" translatable="false">MusicToGo</string>
    <string name="action_settings">Settings</string>
    <string name="action_attach">attach file</string>
    <string name="action_add_chat">Create new Chat</string>
    <string name="action_database_debug" translatable="false">Debug Databases</string>
    <string name="title_activity_settings">Settings</string>
    <string name="select_image">Choose image</string>
    <string name="last_online_today">today at</string>
    <string name="last_online_yesterday">yesterday at</string>
    <string name="last_online_at">at</string>
    <string name="last_message_yesterday">YESTERDAY</string>
    <string name="online">online</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="new_messages">new Messages</string>
    <string name="new_message">new Message</string>
    <string name="from">from</string>
    <string name="new_password">Enter a new password</string>
    <string name="confirm_password">Confirm your new password</string>
    <string name="pwd_dont_match">The passwords do not match</string>
    <string name="pwd_changed">The password was successfully changed</string>
    <string name="pwd_not_changed">The password was not changed</string>
    <string name="send_image">Send Image</string>
    <string name="change_pwd">Change password</string>
    <string name="home" translatable="false">Home</string>
    <string name="sd_card" translatable="false">SD Card</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="image">Image</string>
    <string name="invalid_pwd">The password is incorrect</string>
    <string name="logging_in">Logging in</string>
    <string name="delete_message">Delete message from this Chat?</string>
    <string name="delete_messages">Delete messages from this Chat?</string>
    <string name="change_name_title">Change the name for</string>
    <string name="change_name">Choose a new name for this chat:</string>
    <string name="rename">rename</string>
    <string name="load_more_messages">Load more messages</string>
    <string name="wallpaper_changed">The wallpaper was successfully changed</string>
    <string name="wallpaper_not_changed">The wallpaper was not changed</string>
    <string name="add_chat_title">Choose the user you wish to text</string>
    <string name="create">Create</string>

    <!-- String array chatlist_options_array's values -->
    <string name="chatlist_option_1">Rename Chat</string>
    <string name="chatlist_option_2">Delete Chat</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_header_password">Password</string>
    <string name="pref_header_chats">Chats</string>

    <string name="pref_title_new_message_notifications">New message
        notifications</string>
    <string name="pref_summary_new_message_notifications">Enable
        notifications for new messages</string>
    <string name="pref_key_new_message_notifications" translatable="false">notifications_new_message</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_key_ringtone" translatable="false">notifications_new_message_ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_summary_vibrate">Enable vibration for the
        notifications</string>
    <string name="pref_key_vibrate" translatable="false">notifications_new_message_vibrate</string>

    <string name="pref_title_led">Blink LED</string>
    <string name="pref_summary_led">Enable the LED blink for the
        notifications</string>
    <string name="pref_key_led" translatable="false">notifications_new_message_led</string>

    <string name="pref_title_banner">Show notification banner</string>
    <string name="pref_summary_banner">Enable to show the notification
        in the notification drawer until you clicked on it or discarded
    it</string>
    <string name="pref_key_banner" translatable="false">notifications_new_message_as_banner</string>

    <string name="pref_key_privacy" translatable="false">notifications_new_message_privacy</string>
    <string name="pref_title_privacy">Notification privacy</string>
    <string name="pref_detail_privacy">Choose what to show on lock
        screen</string>
    <string name="pref_value1_privacy">Show nothing</string>
    <string name="pref_value2_privacy">Show basic information</string>
    <string name="pref_value3_privacy">Show everything</string>

    <string name="pref_key_changepwd" translatable="false">password_change_pwd</string>
    <string name="pref_title_changepwd">Change the password</string>
    <string name="pref_summary_changepwd">Enter a new password</string>

    <string name="pref_key_enablepwd" translatable="false">password_enable_pwd</string>
    <string name="pref_title_enablepwd">Enable the password</string>
    <string name="pref_summary_enablepwd">Enable to activate the
        password protection</string>

    <string name="pref_key_wallpaper" translatable="false">wallpaper
    </string>
    <string name="pref_title_wallpaper">Wallpaper</string>
    <string name="pref_summary_wallpaper">Choose a wallpaper for the
        Chats</string>

    <string name="pref_key_reset_wallpaper"
            translatable="false">reset_wallpaper
    </string>
    <string name="pref_title_reset_wallpaper">Reset wallpaper</string>
    <string name="pref_summary_reset_wallpaper">Reset the wallpaper to
        the default image</string>

    <string name="title_activity_add_chat" translatable="false">AddChatActivity</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
