<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="@string/pref_key_new_message_notifications"
        android:title="@string/pref_title_new_message_notifications"
        android:summary="@string/pref_summary_new_message_notifications"
        android:defaultValue="true" />

    <RingtonePreference
        android:dependency="@string/pref_key_new_message_notifications"
        android:key="@string/pref_key_ringtone"
        android:title="@string/pref_title_ringtone"
        android:ringtoneType="notification"
        android:defaultValue="content://settings/system/notification_sound" />

    <SwitchPreference
        android:dependency="@string/pref_key_new_message_notifications"
        android:key="@string/pref_key_vibrate"
        android:title="@string/pref_title_vibrate"
        android:summary="@string/pref_summary_vibrate"
        android:defaultValue="true"/>

    <SwitchPreference
        android:dependency="@string/pref_key_new_message_notifications"
        android:key="@string/pref_key_led"
        android:title="@string/pref_title_led"
        android:summary="@string/pref_summary_led"
        android:defaultValue="true"/>

    <SwitchPreference
        android:dependency="@string/pref_key_new_message_notifications"
        android:key="@string/pref_key_banner"
        android:title="@string/pref_title_banner"
        android:summary="@string/pref_summary_banner"
        android:defaultValue="true"/>

</PreferenceScreen>
