<?xml version="1.0" encoding="utf-8"?>
<!--
    * Copyright 2016 Niklas Schelten
    *
    * Licensed under the Apache License, Version 2.0 (the "License");
    * you may not use this file except in compliance with the License.
    * You may obtain a copy of the License at
    *
    * http://www.apache.org/licenses/LICENSE-2.0
    *
    * Unless required by applicable law or agreed to in writing, software
    * distributed under the License is distributed on an "AS IS" BASIS,
    * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    * See the License for the specific language governing permissions and
    * limitations under the License.
!-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="@string/pref_key_enablepwd"
        android:summary="@string/pref_summary_enablepwd"
        android:title="@string/pref_title_enablepwd">
    </SwitchPreference>


    <Preference
        android:dependency="@string/pref_key_enablepwd"
        android:key="@string/pref_key_changepwd"
        android:summary="@string/pref_summary_changepwd"
        android:title="@string/pref_title_changepwd">
        <intent
            android:action=".ui.settings.ChangePasswordActivity">
            <extra
                android:name="com.raspi.chatapp.ui.settings.ChangePasswordActivity.ASK_PWD"
                android:value="true"/>
        </intent>
    </Preference>
</PreferenceScreen>