<?xml version="1.0" encoding="utf-8"?>
<!--
    * Copyright 2016 Niklas Schelten
    *
    * Licensed under the Apache License, Version 2.0 (the "License");
    * you may not use this file except in compliance with the License.
    * You may obtain a copy of the License at
    *
    * http://www.apache.org/licenses/LICENSE-2.0
    *
    * Unless required by applicable law or agreed to in writing, software
    * distributed under the License is distributed on an "AS IS" BASIS,
    * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    * See the License for the specific language governing permissions and
    * limitations under the License.
!-->
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.raspi.chatapp.ui.settings.ChangePasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/pwd_no_match"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/holo_red_dark"
            android:text="@string/pwd_dont_match"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/new_pin_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pwd_no_match"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/new_password"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/new_pin"
            android:layout_width="95sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_pin_desc"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:background="@color/listview_transparent_bg"
            android:gravity="center"
            android:inputType="numberPassword"
            android:maxEms="4"
            android:textSize="35sp"/>

        <TextView
            android:id="@+id/confirm_pin_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_pin"
            android:layout_centerHorizontal="true"
            android:text="@string/confirm_password"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/confirm_pin"
            android:layout_width="95sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirm_pin_desc"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:background="@color/listview_transparent_bg"
            android:gravity="center"
            android:inputType="numberPassword"
            android:maxEms="4"
            android:textSize="35sp"/>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
